# shakugan-no-haskell

./: .gitignore  README.md  default.nix  shakugan-no-haskell.cabal
src/: Main.hs
src/Shakugan/: CharacterControl.hs  Load.hs  Types.hs  Util.hs
