name:                shakugan-no-haskell
version:             0.0.0.0
synopsis:            Simple game featuring the best character.
description:         Simple game featuring the best character.
homepage:            https://github.com/Fuuzetsu/shakugan-no-haskell
license:             GPL-3
license-file:        LICENSE
author:              Mateusz Kowalczyk <fuuzetsu@fuuzetsu.co.uk>
maintainer:          Mateusz Kowalczyk <fuuzetsu@fuuzetsu.co.uk>
category:            Game
build-type:          Simple
cabal-version:       >=1.8
data-files:
  data/images/backdrop.png
  data/images/backdrop_dark.png
  data/images/shana.png

executable shakugan-no-haskell
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:     base >=4.3 && <5
                   , lens >= 3.8 && <5
                   , free-game >= 1.1 && <1.2
                   , mtl ==2.1.*
                   , time ==1.4.*
                   , minioperational ==0.4.*
                   , containers >=0.5
                   , data-default >=0.5
                   , vector >=0.10
                   , transformers >=0.2
  ghc-options:       -O2 -Wall
  default-language:    Haskell2010
  other-modules:
    Shakugan.Load
    Shakugan.Types
    Shakugan.Util
    Shakugan.CharacterControl